<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.czjakac.a2048.MenuActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/menu"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/menu_btn_keep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundsquares"
            android:text="@string/keepGoing"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/menu_btn_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundsquares"
            android:text="@string/newGame"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/menu_btn_multiplayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundsquares"
            android:text="@string/multiplayer"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <ToggleButton
            android:id="@+id/menu_btn_sounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundsquares"
            android:checked="true"
            android:text="ToggleButton"
            android:textColor="@android:color/white"
            android:textOff="@string/soundsOff"
            android:textOn="@string/soundsOn"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
