<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context="com.example.czjakac.a2048.MainActivity">


    <!--

    <TextView
        android:id="@+id/m_tw_sentence"
        android:layout_width="340dp"
        android:layout_height="37dp"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="Join the numbers and get to the 2048 tile!"
        android:textAlignment="textStart"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="345dp"
        android:layout_height="188dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038">

        <Button
            android:id="@+id/m_btn_leaderboard"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/roundedbuttons"
            android:text="@string/leaderboard"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/m_btn_menu"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/roundedbuttons"
            android:text="@string/menu"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/m_tw_best"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="231dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/roundedscores"
            android:gravity="center"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="231dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/m_tw_score"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/roundedscores"
            android:gravity="center"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/m_tw_2048"
            android:layout_width="100dp"
            android:layout_height="102dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/roundtitle"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

    </android.support.constraint.ConstraintLayout>-->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/m_tw_2048"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/roundtitle"
                    android:gravity="center"
                    android:minHeight="120dp"
                    android:minWidth="120dp"
                    android:text="@string/app_name"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/m_tw_score"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_margin="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="0.01"
                            android:background="@drawable/roundedscores"
                            android:gravity="top"
                            android:lines="2"
                            android:minLines="2"
                            android:paddingTop="5dp"
                            android:singleLine="false"
                            android:text="@string/score"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/m_tw_best"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="0.01"
                            android:background="@drawable/roundedscores"
                            android:gravity="top"
                            android:lines="2"
                            android:minLines="2"
                            android:paddingTop="5dp"
                            android:singleLine="false"
                            android:text="@string/best"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/m_tw_menu"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/roundedbuttons"
                            android:text="@string/menu"
                            android:textColor="?android:attr/textColorPrimaryInverse"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/m_tw_leaderboard"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/roundedbuttons"
                            android:text="@string/leaderboard"
                            android:textColor="?android:attr/textColorPrimaryInverse"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:text="Join the numbers and get to the 2048 tile!"
                android:textSize="18dp"
                android:textStyle="bold" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1" />

            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roudmatrix"
                android:columnCount="4"
                android:rowCount="4">

                <TextView
                    android:id="@+id/textView00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/square" />

                <TextView
                    android:id="@+id/textView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/square" />


                <TextView
                    android:id="@+id/textView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/square" />

                <TextView
                    android:id="@+id/textView03"
                    style="@style/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView10"
                    style="@style/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView11"
                    style="@style/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView12"
                    style="@style/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView13"
                    style="@style/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView20"
                    style="@style/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView21"
                    style="@style/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView22"
                    style="@style/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView23"
                    style="@style/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView30"
                    style="@style/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView31"
                    style="@style/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView32"
                    style="@style/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView33"
                    style="@style/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </GridLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
